# detectorlib

./: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pr-badge.yml  pull_request_template.md
.github/workflows/: frameworkPR.yml  frameworkValidation.yml  validation.yml
inc/: TRestDetector.h  TRestDetectorAlphaAnalysisProcess.h  TRestDetectorAvalancheProcess.h  TRestDetectorDaqChannelSwitchingProcess.h  TRestDetectorDriftVolume.h  TRestDetectorElectronDiffusionProcess.h  TRestDetectorExperimentalReadout.h  TRestDetectorExperimentalReadoutChannel.h  TRestDetectorExperimentalReadoutModule.h  TRestDetectorExperimentalReadoutPixel.h  TRestDetectorFiducializationProcess.h  TRestDetectorGainMap.h  TRestDetectorGarfieldDriftProcess.h  TRestDetectorGas.h  TRestDetectorGeometry.h  TRestDetectorHitmapAnalysisProcess.h  TRestDetectorHitmapTransformationProcess.h  TRestDetectorHits3DReconstructionProcess.h  TRestDetectorHitsAnalysisProcess.h  TRestDetectorHitsEvent.h  TRestDetectorHitsEventViewer.h  TRestDetectorHitsGaussAnalysisProcess.h  TRestDetectorHitsNormalizationProcess.h  TRestDetectorHitsReadoutAnalysisProcess.h  TRestDetectorHitsReductionProcess.h  TRestDetectorHitsRotateAndTranslateProcess.h  TRestDetectorHitsRotateProcess.h  TRestDetectorHitsRotationProcess.h  TRestDetectorHitsShuffleProcess.h  TRestDetectorHitsSmearingProcess.h  TRestDetectorHitsSpecularProcess.h  TRestDetectorHitsToSignalProcess.h  TRestDetectorHitsTranslationProcess.h  TRestDetectorLightAttenuationProcess.h  TRestDetectorPositionMappingProcess.h  TRestDetectorReadout.h  TRestDetectorReadoutChannel.h  TRestDetectorReadoutEventViewer.h  TRestDetectorReadoutMapping.h  TRestDetectorReadoutModule.h  (+12 more)
macros/: REST_Detector_CheckReadout.C  REST_Detector_DrawCombinedGasCurves.C  REST_Detector_GenerateGasFile.C  REST_Detector_HitCentering.C  REST_Detector_UpdateDecoding.C  REST_Detector_ViewHitsEvent.C  REST_Detector_ViewReadout.C  REST_Detector_ViewReadoutEvent.C
pipeline/: validateLibrary.py
pipeline/analysis/: hitmap.C  hitmap.rml  transform.C  transform.rml
pipeline/clang-format/: clangformattest.sh
pipeline/hits/rotation/: rotation.C  rotation45off.rml  rotation90.rml
pipeline/hits/specular/: specular.C  specularY.rml  specularYoff.rml
pipeline/hits/translation/: .rotation45off.rml.swp  specularXY.rml  translation.C  translation.rml
pipeline/readout/: PrintReadout.C  checkLines.py  check_readout.sh  compareFiles.py  dummy.dec  generateReadout.rml  microbulkModule.rml  validation.txt
src/: TRestDetector.cxx  TRestDetectorAlphaAnalysisProcess.cxx  TRestDetectorAvalancheProcess.cxx  TRestDetectorDaqChannelSwitchingProcess.cxx  TRestDetectorDriftVolume.cxx  TRestDetectorElectronDiffusionProcess.cxx  TRestDetectorExperimentalReadout.cxx  TRestDetectorExperimentalReadoutChannel.cxx  TRestDetectorExperimentalReadoutModule.cxx  TRestDetectorExperimentalReadoutPixel.cxx  TRestDetectorFiducializationProcess.cxx  TRestDetectorGainMap.cxx  TRestDetectorGarfieldDriftProcess.cxx  TRestDetectorGas.cxx  TRestDetectorGeometry.cxx  TRestDetectorHitmapAnalysisProcess.cxx  TRestDetectorHitmapTransformationProcess.cxx  TRestDetectorHits3DReconstructionProcess.cxx  TRestDetectorHitsAnalysisProcess.cxx  TRestDetectorHitsEvent.cxx  TRestDetectorHitsEventViewer.cxx  TRestDetectorHitsGaussAnalysisProcess.cxx  TRestDetectorHitsNormalizationProcess.cxx  TRestDetectorHitsReadoutAnalysisProcess.cxx  TRestDetectorHitsReductionProcess.cxx  TRestDetectorHitsRotateAndTranslateProcess.cxx  TRestDetectorHitsRotateProcess.cxx  TRestDetectorHitsRotationProcess.cxx  TRestDetectorHitsShuffleProcess.cxx  TRestDetectorHitsSmearingProcess.cxx  TRestDetectorHitsSpecularProcess.cxx  TRestDetectorHitsToSignalProcess.cxx  TRestDetectorHitsTranslationProcess.cxx  TRestDetectorLightAttenuationProcess.cxx  TRestDetectorPositionMappingProcess.cxx  TRestDetectorReadout.cxx  TRestDetectorReadoutChannel.cxx  TRestDetectorReadoutEventViewer.cxx  TRestDetectorReadoutMapping.cxx  TRestDetectorReadoutModule.cxx  (+12 more)
test/: CMakeLists.txt
test/files/: TRestDetectorElectronDiffusionProcess.rml  TRestDetectorGasExample.rml  TRestDetectorVetoReadout.rml
test/src/: Processes.cxx  TRestDetectorGas.cxx  TRestDetectorReadout.cxx  TRestDetectorVetoReadout.cxx
